Add buttons to GUI

--- a/przykladowyProgram/ConcurrentProgramming/ReactiveInteractiveUserInterface/GraphicalUserInterface/MainWindow.xaml
+++ b/przykladowyProgram/ConcurrentProgramming/ReactiveInteractiveUserInterface/GraphicalUserInterface/MainWindow.xaml
@@ -1,32 +1,42 @@
-﻿<Window x:Class="TP.ConcurrentProgramming.PresentationView.MainWindow"
+﻿<Window x:Class="TP.ConcurrentProgramming.Presentation.View.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:TP.ConcurrentProgramming.Presentation.ViewModel;assembly=TP.ConcurrentProgramming.PresentationViewModel"
-        mc:Ignorable="d"
-        Title="Presentation layer targeting reactive behaviour" Height="auto" Width="auto">
+        Title="Symulacja Kul" Height="500" Width="500">
+    
     <Window.DataContext>
         <vm:MainWindowViewModel />
     </Window.DataContext>
-    <Border BorderThickness="4" BorderBrush="Green" Height="420" Width="400">
-        <ItemsControl ItemsSource="{Binding Balls}">
-            <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <Canvas />
-                </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
-            <ItemsControl.ItemTemplate>
-                <DataTemplate>
-                    <Ellipse Width= "{Binding Diameter}" Height="{Binding Diameter}" Fill="Blue" />
-                </DataTemplate>
-            </ItemsControl.ItemTemplate>
-            <ItemsControl.ItemContainerStyle>
-                <Style TargetType="ContentPresenter">
-                    <Setter Property="Canvas.Top" Value="{Binding Top}" />
-                    <Setter Property="Canvas.Left" Value="{Binding Left}" />
-                </Style>
-            </ItemsControl.ItemContainerStyle>
-        </ItemsControl>
-    </Border>
+
+    <DockPanel Margin="10">
+        <!-- Górny panel z kontrolkami -->
+        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="0,0,0,10">
+            <Label Content="Liczba kul:" VerticalAlignment="Center" />
+            <TextBox Width="50" Text="{Binding NumberOfBallsToAdd, UpdateSourceTrigger=PropertyChanged}" Margin="5,0" />
+            <Button Content="Start" Command="{Binding StartSimulationCommand}" Margin="5,0" />
+            <Button Content="Wyczyść" Command="{Binding ClearBallsCommand}" Margin="5,0" />
+        </StackPanel>
+
+        <!-- Obszar z kulami -->
+        <Border BorderThickness="2" BorderBrush="Green" Height="420" Width="420">
+            <ItemsControl ItemsSource="{Binding Balls}">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <Canvas />
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <Ellipse Width="{Binding Diameter}" Height="{Binding Diameter}" Fill="Blue" />
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+                <ItemsControl.ItemContainerStyle>
+                    <Style TargetType="ContentPresenter">
+                        <Setter Property="Canvas.Top" Value="{Binding Top}" />
+                        <Setter Property="Canvas.Left" Value="{Binding Left}" />
+                    </Style>
+                </ItemsControl.ItemContainerStyle>
+            </ItemsControl>
+        </Border>
+    </DockPanel>
 </Window>
