--- a/przykladowyProgram/ConcurrentProgramming/ReactiveInteractiveUserInterface/GraphicalUserInterface/MainWindow.xaml
+++ b/przykladowyProgram/ConcurrentProgramming/ReactiveInteractiveUserInterface/GraphicalUserInterface/MainWindow.xaml
@@ -1,42 +1,51 @@
-﻿<Window x:Class="TP.ConcurrentProgramming.Presentation.View.MainWindow"
+﻿<Window x:Class="TP.ConcurrentProgramming.PresentationView.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:TP.ConcurrentProgramming.Presentation.ViewModel;assembly=TP.ConcurrentProgramming.PresentationViewModel"
-        Title="Symulacja Kul" Height="500" Width="500">
-    
+        mc:Ignorable="d"
+        Title="Symulacja Kul" Height="600" Width="800">
+
     <Window.DataContext>
         <vm:MainWindowViewModel />
     </Window.DataContext>
 
-    <DockPanel Margin="10">
-        <!-- Górny panel z kontrolkami -->
-        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="0,0,0,10">
-            <Label Content="Liczba kul:" VerticalAlignment="Center" />
-            <TextBox Width="50" Text="{Binding NumberOfBallsToAdd, UpdateSourceTrigger=PropertyChanged}" Margin="5,0" />
-            <Button Content="Start" Command="{Binding StartSimulationCommand}" Margin="5,0" />
-            <Button Content="Wyczyść" Command="{Binding ClearBallsCommand}" Margin="5,0" />
+    <DockPanel LastChildFill="True">
+
+        <!-- guziczki -->
+        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="20" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <TextBlock VerticalAlignment="Center" Margin="10,0">Liczba kul:</TextBlock>
+            <TextBox Width="50" Text="{Binding NumberOfBallsToAdd}" Margin="10,0" />
+
+            <Button Content="Start" Command="{Binding StartSimulationCommand}" Margin="10,0" />
+            <Button Content="Wyczyść" Command="{Binding ClearBallsCommand}" Margin="10,0" />
+            <Button Content="Dodaj kulę" Command="{Binding AddBallCommand}" Margin="10,0" />
+            <Button Content="Usuń kulę" Command="{Binding RemoveBallCommand}" Margin="10,0" />
         </StackPanel>
 
-        <!-- Obszar z kulami -->
-        <Border BorderThickness="2" BorderBrush="Green" Height="420" Width="420">
-            <ItemsControl ItemsSource="{Binding Balls}">
-                <ItemsControl.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <Canvas />
-                    </ItemsPanelTemplate>
-                </ItemsControl.ItemsPanel>
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <Ellipse Width="{Binding Diameter}" Height="{Binding Diameter}" Fill="Blue" />
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-                <ItemsControl.ItemContainerStyle>
-                    <Style TargetType="ContentPresenter">
-                        <Setter Property="Canvas.Top" Value="{Binding Top}" />
-                        <Setter Property="Canvas.Left" Value="{Binding Left}" />
-                    </Style>
-                </ItemsControl.ItemContainerStyle>
-            </ItemsControl>
-        </Border>
+        <!-- plansza -->
+        <Viewbox Stretch="Uniform" Margin="40">
+            <Border BorderBrush="Red" BorderThickness="2" Width="400" Height="400">
+                <ItemsControl ItemsSource="{Binding Balls}">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <Canvas />
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Ellipse Width="{Binding Diameter}" Height="{Binding Diameter}" Fill="Orange" />
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                    <ItemsControl.ItemContainerStyle>
+                        <Style TargetType="ContentPresenter">
+                            <Setter Property="Canvas.Top" Value="{Binding Top}" />
+                            <Setter Property="Canvas.Left" Value="{Binding Left}" />
+                        </Style>
+                    </ItemsControl.ItemContainerStyle>
+                </ItemsControl>
+            </Border>
+        </Viewbox>
     </DockPanel>
 </Window>
